tests/specs/ecosystem/xeaone/server/5_3_2.test
xeaone/server/5.3.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/http@0.216": "jsr:@std/http@0.216.0"
    },
    "jsr": {
      "@std/http@0.216.0": {
        "integrity": "fe1ff331f2b02dd4c96b799da5a156846c663457ab1bcb82f0428a4821726f42"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<Options>'.
  handle(context: Context, options?: Options): void {}
  ~~~~~~
    at file://<tmpdir>/src/cache.ts:36:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<string>'.
  handle(context: Context, origin: string): void {}
  ~~~~~~
    at file://<tmpdir>/src/cors.ts:4:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | void {
  ~~~~~~
    at file://<tmpdir>/src/defenders.ts:130:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context, use: boolean): Promise<Response | void> {
  ~~~~~~
    at file://<tmpdir>/src/file.ts:21:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/forwarded.ts:6:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): void {}
  ~~~~~~
    at file://<tmpdir>/src/forwarded.ts:7:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | void {
  ~~~~~~
    at file://<tmpdir>/src/normalize.ts:17:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/payload.ts:15:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context): Promise<void> {
  ~~~~~~
    at file://<tmpdir>/src/payload.ts:16:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<Handle>'.
  handle(context: Context, route?: Handle): Promise<Response | void> | Response | void {
  ~~~~~~
    at file://<tmpdir>/src/router.ts:5:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  setup(context: Context): void {}
  ~~~~~
    at file://<tmpdir>/src/session.ts:122:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<boolean>'.
  handle(context: Context, use: boolean): Promise<Response | void> {
  ~~~~~~
    at file://<tmpdir>/src/session.ts:123:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Plugin<any>'.
  handle(context: Context): Response | undefined {
  ~~~~~~
    at file://<tmpdir>/src/socket.ts:13:3

Found 13 errors.

error: Type checking failed.

